--- a/src/tg_kernel/src/modules/CMakeLists.txt
+++ b/src/tg_kernel/src/modules/CMakeLists.txt
@@ -1,5 +1,5 @@
 # bar library
-SET(BAR_src ${SRCBAR}/tg_functions.f90
-             ${SRCBAR}/constants.f90
+SET(BAR_src ${SRCBAR}/mod_functions.f90
+             ${SRCBAR}/mod_constants.f90
 )
 ADD_LIBRARY(${BARLIB} STATIC ${BAR_src})
