--- a/src/pdb_kernel/src/modules/CMakeLists.txt
+++ b/src/pdb_kernel/src/modules/CMakeLists.txt
@@ -1,5 +1,6 @@
 # bar library
 SET(BAR_src ${SRCBAR}/mod_functions.f90
              ${SRCBAR}/mod_constants.f90
+#             ${SRCBAR}/mod_rules.f90
 )
 ADD_LIBRARY(${BARLIB} STATIC ${BAR_src})
