--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-language: python
+language: python, fortran90
+
+branches:
+  only:
+     - master 
 
 before_install:
   - sudo apt-get install cmake
